--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -16,318 +15,311 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
+
 body {
-	line-height: 1;
-	background-color: #FFFEF8;
-	font-family: 'Work Sans' ;
+  line-height: 1;
+  background-color: #FFFEF8;
+  font-family: "Work Sans";
 }
+
 ol, ul {
-	list-style: none;
+  list-style: none;
 }
+
 blockquote, q {
-	quotes: none;
+  quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+  content: "";
+  content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
+
 /** end reset css**/
-
-.main-container {
-	max-width: 1140px;
-	margin:auto;
-	font-size: 14px;
-}
-
-header {
-	display: flex;
-	justify-content: space-between;
-	margin: 50px 0
-}
 section {
-	margin: 50px 0
+  margin: 50px 0;
 }
 
-h1{
-	display: flex;
-	flex-direction: column;
-	font-family: 'Syne';
-	font-size: 22px;
-	font-weight: 800;
-	color: #B1663C
+h1 {
+  display: flex;
+  flex-direction: column;
+  font-family: "Syne";
+  font-size: 22px;
+  font-weight: 800;
+  color: #B1663C;
 }
 
 h1 > span {
-	font-family: 'Work Sans';
-	font-size:10px;
-	letter-spacing: 0.1em;
-;
+  font-family: "Work Sans";
+  font-size: 10px;
+  letter-spacing: 0.1em;
 }
 
-h2{
-	font-family: 'Syne';
-	font-weight: 700;
-	font-size: 30px;
-	color: #1D6154
+h2 {
+  font-family: "Syne";
+  font-weight: 700;
+  font-size: 30px;
+  color: #1D6154;
 }
+
+input[type=submit] {
+  font-family: "Syne";
+  font-weight: 700;
+  color: white;
+  background-color: #1D6154;
+  margin: 2em auto;
+  width: 180px;
+  text-align: center;
+  border-radius: 60px;
+  cursor: pointer;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 0;
+}
+
+.main-container {
+  max-width: 1140px;
+  margin: auto;
+  font-size: 14px;
+}
+
 nav ul {
-	display: flex;
-	align-items: center;
-	list-style-type: none;
-
+  display: flex;
+  align-items: center;
+  list-style-type: none;
 }
-nav li {
-	cursor: pointer;
-	padding: 0 10px;
-	font-size: 1.2em;
+nav ul .nav__link {
+  text-decoration: none;
+  color: black;
 }
-
-li:hover {
-	color: #B1663C;
+nav ul li {
+  cursor: pointer;
+  padding: 0 10px;
+  font-size: 1.2em;
 }
-/*css pour le lien login*/
-.nav__link {
-	text-decoration: none;
-	color: black;
+nav ul li:hover {
+  color: #B1663C;
 }
 
 #introduction {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 #introduction figure {
-	flex: 1
+  flex: 1;
 }
 #introduction img {
-	display: block;
-	margin: auto;
-	width: 80%;
+  display: block;
+  margin: auto;
+  width: 80%;
 }
-
 #introduction article {
-	flex: 1
+  flex: 1;
 }
 #introduction h2 {
-	margin-bottom: 1em;
+  margin-bottom: 1em;
 }
-
 #introduction p {
-	margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
+
 #portfolio h2 {
-	text-align: center;
-	margin-bottom: 1em;
+  text-align: center;
+  margin-bottom: 1em;
 }
-.gallery {
-	margin: 0 auto;
-	width: 84.4%;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+#portfolio .categories {
+  text-align: center;
+}
+#portfolio .categories input {
+  border: 1px solid #1D6154;
+  border-radius: 60px;
+  color: #1D6154;
+  background-color: white;
+  font-family: "Syne";
+  font-weight: 700;
+  margin: 2em 5px;
+  text-align: center;
+  box-sizing: border-box;
+  height: 50px;
+  font-size: 1.2em;
+  min-width: 100px;
+  padding: 10px;
+}
+#portfolio .categories input:hover {
+  color: white;
+  background-color: #1D6154;
+  cursor: pointer;
+}
+#portfolio .gallery {
+  margin: 0 auto;
+  width: 84.4%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+#portfolio .gallery img {
+  width: 100%;
 }
 
-.gallery img {
-	width: 100%;
-}
-/*Css Categories*/
-.categories {
-	text-align: center;
-}
-.categories input {
-	border: 1px solid #1D6154;
-	border-radius: 60px;
-	color: #1D6154;
-	background-color: white;
-	font-family: 'Syne';
-	font-weight: 700;
-	margin : 2em 5px;
-	text-align: center;
-	box-sizing: border-box;
-	height: 50px;
-	font-size: 1.2em;
-	min-width: 100px;
-	padding: 10px;
-	&:hover {
-		color: white;
-		background-color: #1D6154;
-		cursor: pointer;
-	}
-}
-/*Fin du Css categories*/
-#contact {
-	width: 33.3%;
-	margin: auto;
-}
 #contact > * {
-	text-align: center;
-
+  text-align: center;
 }
-#contact h2{
-	margin-bottom: 20px;
+
+#contact {
+  width: 33.3%;
+  margin: auto;
+}
+#contact h2 {
+  margin-bottom: 20px;
 }
 #contact form {
-	text-align: left;
-	margin-top:30px;
-	display: flex;
-	flex-direction: column;
-}
-
-#contact input {
-	height: 50px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  text-align: left;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
 }
 #contact label {
-	margin: 2em 0 1em 0;
+  margin: 2em 0 1em 0;
+}
+#contact input {
+  height: 50px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 #contact textarea {
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-}
-
-input[type="submit"]{
-	font-family: 'Syne';
-	font-weight: 700;
-	color: white;
-	background-color: #1D6154;
-	margin : 2em auto ;
-	width: 180px;
-	text-align: center;
-	border-radius: 60px ;
-	cursor: pointer;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
 footer {
-	height: 60px;
-	background-color: white;
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
+  height: 60px;
+  background-color: white;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
-
 footer nav ul li {
-	padding: 0 107px 0 0;
+  padding: 0 107px 0 0;
 }
-
-/***************************************************Css Login*************************************************************************/
 
 .login-header {
-	margin: 50px 150px;
+  margin: 50px 150px;
+}
+.login-header b {
+  font-weight: bold;
 }
 
-.login-header b {
-	font-weight: bold;
+#login-contact > * {
+  text-align: center;
 }
 
 #login-contact {
-	width: 26.8%;
-	margin: 0 auto 355px;
+  width: 26.8%;
+  margin: 0 auto 355px;
 }
-#login-contact > * {
-	text-align: center;
-
-}
-#login-contact h2{
-	margin-bottom: 20px;
+#login-contact h2 {
+  margin-bottom: 20px;
 }
 #login-contact form {
-	text-align: left;
-	margin-top:30px;
-	display: flex;
-	flex-direction: column;
+  text-align: left;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
 }
-
-#login-contact input {
-	height: 50px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+#login-contact form label {
+  margin: 2em 0 1em 0;
 }
-#login-contact label {
-	margin: 2em 0 1em 0;
+#login-contact form input {
+  height: 50px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-
-#login-error-message { 
-	margin-top: 20px;
-	text-align: center;
-	color: red;
+#login-contact form #error-message {
+  margin-top: 20px;
+  text-align: center;
+  color: red;
 }
 
 form + p {
-	cursor: pointer;
-	color: #3D3D3D;
-	text-decoration: underline;
+  cursor: pointer;
+  color: #3D3D3D;
+  text-decoration: underline;
 }
-
 form + p:hover {
-	color: #B1663C;
+  color: #B1663C;
 }
 
 .login-footer {
-	display: flex;
-	justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
-/***********************************************************CSS Edit mode******************************************************************/
-
-.editbarr {
-	height: 59px;
-	background-color: black;
-	display: flex;
-	gap: 25px;
-	justify-content: center;
-	align-items: center;
-	color: white;
-	font-family: 'Work Sans' ;
+.edit-mode {
+  display: none;
+}
+.edit-mode .editbarr {
+  height: 59px;
+  background-color: black;
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "Work Sans";
+}
+.edit-mode .editbarr .edit-logo i {
+  margin-right: 10px;
+}
+.edit-mode .editbarr .edit-btn {
+  border-radius: 60px;
+  background-color: #FFFFFF;
+  color: black;
+  padding: 11px 23px;
 }
 
-.edit-logo i {
-	margin-right: 10px;
-}
-
-.edit-btn {
-	border-radius: 60px;
-	background-color: #FFFFFF;
-	color: black;
-	padding: 11px 23px;
-}
- 
 #logout-link {
-	display: none;
+  display: none;
 }
 
 .intro-logo {
-	margin: 13px 0 0 57px;
-	display: none;
-}
- 
-.portfolio-title-and-logo {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: baseline;
-	gap: 30px;
+  margin: 13px 0 0 57px;
+  display: none;
 }
 
-.portfolio-logo {
-	display: none;
+.portfolio-title-and-logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: baseline;
+  gap: 30px;
 }
+.portfolio-title-and-logo .portfolio-logo {
+  display: none;
+}
+
+/*# sourceMappingURL=style.css.map */
