--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -320,6 +320,91 @@ form + p:hover {
 }
 .portfolio-title-and-logo .portfolio-logo {
   display: none;
+  text-decoration: none;
+  color: black;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal .modal-wrapper {
+  background-color: #FFFFFF;
+  width: 43.8%;
+  max-width: 630px;
+  max-height: 731px;
+  border-radius: 10px;
+  text-align: center;
+}
+.modal .modal-wrapper .modal-closer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+.modal .modal-wrapper .modal-closer i {
+  cursor: pointer;
+  font-size: 1.6rem;
+  margin-top: 35px;
+  margin-right: 35px;
+}
+.modal .modal-wrapper #title-modal {
+  font-size: 1.7rem;
+}
+.modal .modal-wrapper .modal-gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 430px;
+  margin: 50px auto 0;
+  gap: 10px;
+  text-align: initial;
+  padding-bottom: 50px;
+  border-bottom: 1px solid #B3B3B3;
+}
+.modal .modal-wrapper .modal-gallery figure {
+  width: 77px;
+  position: relative;
+}
+.modal .modal-wrapper .modal-gallery figure img {
+  width: 100%;
+}
+.modal .modal-wrapper .modal-gallery figure #trash {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+  color: white;
+  padding: 4px;
+  background-color: black;
+  border-radius: 2px;
+  font-size: 0.6rem;
+}
+.modal .modal-wrapper .modal-gallery figure #move {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  color: white;
+  padding: 4px;
+  background-color: black;
+  border-radius: 2px;
+  font-size: 0.6rem;
+}
+.modal .modal-wrapper input {
+  height: 50px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  width: 237px;
+}
+.modal .modal-wrapper p {
+  color: #D65353;
+  padding-bottom: 50px;
 }
 
 /*# sourceMappingURL=style.css.map */
