--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -351,8 +351,7 @@ form + p:hover {
 .modal .modal-wrapper .modal-closer i {
   cursor: pointer;
   font-size: 1.6rem;
-  margin-top: 35px;
-  margin-right: 35px;
+  margin: 35px 35px 0 0;
 }
 .modal .modal-wrapper #title-modal {
   font-size: 1.7rem;
@@ -372,13 +371,13 @@ form + p:hover {
   width: 77px;
   position: relative;
 }
-.modal .modal-wrapper .modal-gallery figure:hover #move {
+.modal .modal-wrapper .modal-gallery figure:hover .move {
   display: block;
 }
 .modal .modal-wrapper .modal-gallery figure img {
   width: 100%;
 }
-.modal .modal-wrapper .modal-gallery figure #trash {
+.modal .modal-wrapper .modal-gallery figure .trash {
   position: absolute;
   top: 10px;
   right: 5px;
@@ -389,7 +388,7 @@ form + p:hover {
   font-size: 0.6rem;
   cursor: pointer;
 }
-.modal .modal-wrapper .modal-gallery figure #move {
+.modal .modal-wrapper .modal-gallery figure .move {
   position: absolute;
   top: 10px;
   right: 25px;
@@ -410,6 +409,97 @@ form + p:hover {
 .modal .modal-wrapper p {
   color: #D65353;
   padding-bottom: 50px;
+}
+
+#modal2 .modal-wrapper {
+  max-height: 670px;
+}
+#modal2 .modal-wrapper .return-and-closer {
+  display: flex;
+  justify-content: space-between;
+}
+#modal2 .modal-wrapper .return-and-closer .modal-return i {
+  cursor: pointer;
+  font-size: 1.5rem;
+  margin: 35px 0 0 35px;
+}
+#modal2 .modal-wrapper #title-modal-2 {
+  font-size: 1.7rem;
+}
+#modal2 .modal-wrapper .modal-2-form {
+  width: 420px;
+  margin: 36px auto 32px;
+}
+#modal2 .modal-wrapper .modal-2-form .ajout-photo {
+  width: 100%;
+  height: 169px;
+  background-color: #E8F1F6;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#modal2 .modal-wrapper .modal-2-form .ajout-photo i {
+  font-size: 3.4rem;
+  height: 46px;
+  color: #B9C5CC;
+  margin: 28px 0 19px;
+}
+#modal2 .modal-wrapper .modal-2-form .ajout-photo .input-file {
+  background-color: #CBD6DC;
+  color: #306685;
+  border-radius: 50px;
+  padding: 10px 33px;
+  width: 173px;
+  height: 36px;
+  border: none;
+  margin-bottom: 7px;
+  cursor: pointer;
+}
+#modal2 .modal-wrapper .modal-2-form .ajout-photo #file {
+  display: none;
+}
+#modal2 .modal-wrapper .modal-2-form .ajout-photo .ajout-photo-text {
+  color: #444444;
+  padding: 0;
+  margin-bottom: 19px;
+}
+#modal2 .modal-wrapper .modal-2-form .modal-2-inputs {
+  display: flex;
+  flex-direction: column;
+  padding: 30px 0 47px;
+  border-bottom: solid 1px #B3B3B3;
+}
+#modal2 .modal-wrapper .modal-2-form .modal-2-inputs label {
+  text-align: initial;
+  margin-bottom: 10px;
+}
+#modal2 .modal-wrapper .modal-2-form .modal-2-inputs input {
+  width: 100%;
+}
+#modal2 .modal-wrapper .modal-2-form .modal-2-inputs .input-categorie {
+  margin-top: 20px;
+}
+#modal2 .modal-wrapper .modal-2-form .modal-2-inputs #categorie {
+  width: 424px;
+  height: 52px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuJeEpIJXCso4miG5k7xuvGE-2RcfXriKHfw&usqp=CAU");
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: right 15px top 24px;
+  padding: 15px;
+}
+#modal2 .modal-wrapper .modal-submit {
+  background-color: #A7A7A7;
+  color: white;
+  height: 36px;
 }
 
 /*# sourceMappingURL=style.css.map */
