optimisation-manque-erreur(select)-modal.js

--- a/FrontEnd/assets/SASS/partials/_index.scss
+++ b/FrontEnd/assets/SASS/partials/_index.scss
@@ -17,6 +17,9 @@ nav ul {
     .nav__link {
         text-decoration: none;
         color: black;
+        &:hover {
+            color: #B1663C;
+        }
     }
     li {
         cursor: pointer;
