--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -114,6 +114,9 @@ nav ul .nav__link {
   text-decoration: none;
   color: black;
 }
+nav ul .nav__link:hover {
+  color: #B1663C;
+}
 nav ul li {
   cursor: pointer;
   padding: 0 10px;
@@ -406,31 +409,48 @@ form + p:hover {
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
   width: 237px;
 }
+.modal .modal-wrapper #add-photo-link {
+  display: block;
+  padding: 17px 0;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  width: 237px;
+  text-decoration: none;
+  font-family: "Syne";
+  font-weight: 700;
+  color: white;
+  background-color: #1D6154;
+  margin: 2em auto;
+  border-radius: 60px;
+  cursor: pointer;
+}
 .modal .modal-wrapper p {
   color: #D65353;
   padding-bottom: 50px;
+  cursor: pointer;
 }
 
-#modal2 .modal-wrapper {
+#inner-modal .modal-wrapper {
   max-height: 670px;
 }
-#modal2 .modal-wrapper .return-and-closer {
+#inner-modal .modal-wrapper .return-and-closer {
   display: flex;
   justify-content: space-between;
 }
-#modal2 .modal-wrapper .return-and-closer .modal-return i {
+#inner-modal .modal-wrapper .return-and-closer .modal-return i {
   cursor: pointer;
   font-size: 1.5rem;
   margin: 35px 0 0 35px;
 }
-#modal2 .modal-wrapper #title-modal-2 {
+#inner-modal .modal-wrapper #title-inner-modal {
   font-size: 1.7rem;
 }
-#modal2 .modal-wrapper .modal-2-form {
+#inner-modal .modal-wrapper .inner-modal-form {
   width: 420px;
   margin: 36px auto 32px;
 }
-#modal2 .modal-wrapper .modal-2-form .ajout-photo {
+#inner-modal .modal-wrapper .inner-modal-form .ajout-photo {
   width: 100%;
   height: 169px;
   background-color: #E8F1F6;
@@ -440,13 +460,13 @@ form + p:hover {
   justify-content: center;
   align-items: center;
 }
-#modal2 .modal-wrapper .modal-2-form .ajout-photo i {
-  font-size: 3.4rem;
-  height: 46px;
+#inner-modal .modal-wrapper .inner-modal-form .ajout-photo .image-logo {
+  width: 58px;
+  height: 58px;
   color: #B9C5CC;
   margin: 28px 0 19px;
 }
-#modal2 .modal-wrapper .modal-2-form .ajout-photo .input-file {
+#inner-modal .modal-wrapper .inner-modal-form .ajout-photo .input-file {
   background-color: #CBD6DC;
   color: #306685;
   border-radius: 50px;
@@ -457,40 +477,42 @@ form + p:hover {
   margin-bottom: 7px;
   cursor: pointer;
 }
-#modal2 .modal-wrapper .modal-2-form .ajout-photo #file {
+#inner-modal .modal-wrapper .inner-modal-form .ajout-photo #file {
   display: none;
 }
-#modal2 .modal-wrapper .modal-2-form .ajout-photo .ajout-photo-text {
+#inner-modal .modal-wrapper .inner-modal-form .ajout-photo .ajout-photo-text {
   color: #444444;
   padding: 0;
   margin-bottom: 19px;
 }
-#modal2 .modal-wrapper .modal-2-form .ajout-photo .uploaded-img {
+#inner-modal .modal-wrapper .inner-modal-form .ajout-photo .uploaded-img {
+  padding-bottom: 10px;
   width: 129px;
   height: 169px;
   object-fit: cover;
 }
-#modal2 .modal-wrapper .modal-2-form .ajout-photo .file-too-big {
+#inner-modal .modal-wrapper .inner-modal-form .ajout-photo .file-too-big {
   display: none;
   padding-bottom: 25px;
+  margin-bottom: 10px;
 }
-#modal2 .modal-wrapper .modal-2-form .modal-2-inputs {
+#inner-modal .modal-wrapper .inner-modal-form .inner-modal-form-inputs {
   display: flex;
   flex-direction: column;
   padding: 30px 0 47px;
   border-bottom: solid 1px #B3B3B3;
 }
-#modal2 .modal-wrapper .modal-2-form .modal-2-inputs label {
+#inner-modal .modal-wrapper .inner-modal-form .inner-modal-form-inputs label {
   text-align: initial;
   margin-bottom: 10px;
 }
-#modal2 .modal-wrapper .modal-2-form .modal-2-inputs input {
+#inner-modal .modal-wrapper .inner-modal-form .inner-modal-form-inputs input {
   width: 100%;
 }
-#modal2 .modal-wrapper .modal-2-form .modal-2-inputs .input-categorie {
+#inner-modal .modal-wrapper .inner-modal-form .inner-modal-form-inputs .input-categorie {
   margin-top: 20px;
 }
-#modal2 .modal-wrapper .modal-2-form .modal-2-inputs #categorie {
+#inner-modal .modal-wrapper .inner-modal-form .inner-modal-form-inputs #category {
   width: 424px;
   height: 52px;
   font-size: 1.2em;
@@ -505,7 +527,7 @@ form + p:hover {
   background-position: right 15px top 24px;
   padding: 15px;
 }
-#modal2 .modal-wrapper .modal-submit {
+#inner-modal .modal-wrapper .modal-submit {
   background-color: #A7A7A7;
   color: white;
   height: 36px;
